--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -41,9 +41,15 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     kapt "com.android.databinding:compiler:3.1.2"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+    testImplementation "androidx.test:core:1.0.0-alpha3"
+    testImplementation "androidx.test:runner:1.1.0-alpha3"
+    testImplementation "androidx.test:rules:1.1.0-alpha3"
+    testImplementation "androidx.test.ext:truth:1.0.0-alpha3"
+    testImplementation "androidx.test.espresso:espresso-intents:3.1.0-alpha3"
+    testImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha3"
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.17.0'
-    testImplementation 'org.robolectric:robolectric:3.8'
+    testImplementation "org.robolectric:robolectric:4.0-alpha-2"
     testImplementation 'com.google.truth:truth:0.40'
     testImplementation 'com.nhaarman:mockito-kotlin:1.5.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
